# nlyzer-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  USER_PERSONAS.md  UX_FLOWS.md  UX_RESEARCH.md  docker-compose.yml  justfile  requirements.txt
.claude/: CLAUDE.md
.claude/agents/: ai-developer.md  ai-pm.md  ai-test-writer.md  security-code-reviewer.md
.github/: README.md
.github/workflows/: main.yml
docs/: B2B_PERSONAS.md  B2B_PERSONA_WORKFLOWS.md  CEO_CREDENTIAL_COLLECTION_GUIDE.md  FRONTEND_TECHNICAL_ARCHITECTURE.md  GCP_PROVISIONING_ARCHITECTURE.md  GRAND_IMPLEMENTATION_PLAN.md  IAM_AND_SECRETS_PLAN.md  NLYZER_MVP_EXECUTION_PLAN.md  NLYZER_VISUAL_ARCHITECTURE.md  TECHNICAL_WORKFLOWS.md  UNIFIED_ARCHITECTURAL_BLUEPRINT.md  UX_RESEARCH.md  WEBSITE_CASE_STUDIES.md  WEBSITE_EVALUATOR_PERSONAS.md  WEBSITE_HOMEPAGE_ARCHITECTURE.md  WEBSITE_HOMEPAGE_CONTENT.md  WEBSITE_PRICING_PAGE.md
docs/adr/: 001-pydantic-validation-patterns.md
instructions/: README.md  UX_FLOWS.md
instructions/backend-flows/: AI_AGENT_ARCHITECTURE.md  B2B_DASHBOARD.md
instructions/ux-ui-flows/: UX_RESEARCH.md  VISUAL_MOCKUPS.md
instructions/website/: WEBSITE_DESIGN.md
nlweb_extension/: Dockerfile  README.md  pyproject.toml
nlyzer/: __init__.py  main.py
nlyzer/api/: __init__.py  auth_endpoints.py
nlyzer/core/: __init__.py  config.py  database.py  models.py  security.py
nlyzer/db/: __init__.py  crud.py  models.py
nlyzer_api/: Dockerfile  README.md  alembic.ini  pyproject.toml
nlyzer_api/alembic/: env.py  script.py.mako
nlyzer_api/nlyzer/: __init__.py
nlyzer_api/nlyzer/db/: models.py
nlyzer_api/nlyzer/gcp/: __init__.py  clients.py  dns.py  exceptions.py
scripts/: README.md
website/: README.md
