[tool.poetry]
name = "nlyzer-api"
version = "0.1.0"
description = "NLyzer Control Plane API - FastAPI backend for managing NLWeb instances"
authors = ["NLyzer Team <team@nlyzer.com>"]
readme = "README.md"
packages = [{include = "nlyzer"}]
python = "^3.10"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
httpx = "^0.26.0"
redis = "^5.0.1"
stripe = "^7.12.0"
google-cloud-storage = "^2.13.0"
google-cloud-secret-manager = "^2.18.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
bandit = "^1.7.6"
safety = "^3.0.1"

[tool.ruff]
line-length = 88
select = ["F", "E", "W", "I"]
ignore = []
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/*" = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"